updated minor styling issues for the login page on mobile view. Finished styling for the super admin page and added logout functionality for the super admin

--- a/src/Provider-login/LoginPage.css
+++ b/src/Provider-login/LoginPage.css
@@ -48,14 +48,14 @@
 }
 
 .loginContainer {
-    position: relative;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
     margin: 5px;
-    height: 20rem;
+    height: fit-content;
     width: 100%;
+    padding: 20px 0;
 }
 
 .loginForm {
@@ -114,7 +114,7 @@
 .loginButton:disabled:hover::after {
     content: 'feature not yet available';
     position: absolute;
-    bottom: 40%;
+    top: 20%;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(0, 0, 0, 0.8);
@@ -241,50 +241,32 @@
 
 }
 
-@media (orientation: landscape) and (max-height: 600px) {
+@media (orientation: landscape) and (max-width: 1066px) {
     .loginWrapper {
-        height: auto;
-        min-height: 100vh;
+        height: 100%;
     }
 
     .loginContainer {
-        flex-direction: column;
-        height: auto;
-        padding: 20px 0;
+        min-height: 50vh;
+        padding: 40px 0;
     }
-
-    .loginImageText {
-        position: static;
-        margin-bottom: 20px;
-        font-size: 1.8rem;
-    }
-
-    .Toastify__toast-container {
-        z-index: 9999;
-    }
-
     .loginForm {
         width: 60%;
-        max-width: 500px;
-        padding: 15px;
-        margin-top: 0;
+        max-width: 600px;
     }
+
 
     .input {
-        height: 40px;
-        margin: 8px 0;
+        font-size: 1.2rem;
+        height: 35px;
     }
 
-    .input input {
+    #username,
+    #password {
         font-size: 1.2rem;
     }
 
     .loginButton {
-        font-size: 1.2rem;
-        padding: 0.8rem;
-    }
-
-    .forgot-password {
         font-size: 1.2rem;
     }
 
@@ -293,10 +275,10 @@
     }
 }
 
+
 @media (orientation: landscape) and (min-height: 601px) and (max-height: 800px) {
     .loginContainer {
-        height: auto;
-        min-height: 100vh;
+        min-height: 50vh;
         padding: 40px 0;
     }
 
