--- a/src/SuperAdmin/SuperAdmin.css
+++ b/src/SuperAdmin/SuperAdmin.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    /* margin-top: 20px; */
 }
 
 .superAdminProvidersListWrapper {
@@ -21,22 +22,24 @@
     width: 100%;
 }
 
-.superAdminProvidersListWrapperItem {
-    cursor: pointer;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
 
-.superAdminProvidersListWrapperItem:hover {
-    background-color: rgb(255, 64, 0);
-    color: white;
-}
 
 .superAdminEditWrapper {
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
+}
+
+.superAdminLogoutButton {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.superAdminLogoutButton:hover {
+    background-color: rgb(163, 158, 156);
+    color: white;
 }
